# Walsh-Research

./: .gitignore  COMPRESSION_GUIDE.md  CUDA_GUIDE.md  README.md  analyze_categories.py  analyze_moe_channel.py  analyze_semantic.py  bridge.py  btcsniper.py  check_sparsity.py  compress.py  configurator.py  generate.py  generate_compressed.py  generate_image.py  generate_shakespeare.py  train.py
config/: scholar_124m.py  train_crypto.py  train_fineweb_hadamard_hash.py  train_mnist_image.py  train_shakespeare_hadamard_hash.py  train_tinyshakespeare.py  train_tinystories_hadamard.py  train_tinystories_hadamard_hash.py  train_tinystories_octonion.py  train_tinystories_ssm.py  train_wikipedia_full.py  train_wikipedia_hadamard_hash.py  train_wikipedia_levels_4_5.py  train_wikipedia_moe.py
data/crypto/: meta.pkl  prepare_crypto.py
data/fineweb/: prepare.py
data/mnist/: meta.pkl  prepare.py
data/tinyshakespeare/: prepare.py
data/tinystories/: prepare.py
data/wikipedia/: prepare.py
docs/: architecture_visualization.md
docs/experiment_logs/: README.md
inference/: Cargo.toml  benchmark.py  benchmark_throughput.sh  ckpt_v2.spinnet  dfx.json  model.walsh  run_batch_inference.sh  run_fast.sh  run_fast_inference.sh  run_inference.sh  verify_correctness.sh  verify_single_user.sh
inference/frontend/: index.html
inference/src/: attention.rs  hadamard.rs  lib.rs  model.rs  octonion.rs  spinnet_backend.did  tokenizer.rs  walsh_backend.did
src/model/: __init__.py  cayley_dickson_cuda.py  mhc.py  (+6 more)
tools/: analyze_octonion.py  inspect_data.py  probe.py  probe_semantic.py
(+2 files in other folders)
