[package]
name = "spinnet-inference"
version = "0.1.0"
edition = "2021"
description = "SpinNet inference engine for Internet Computer"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-macros = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "z"
# lto = true  # Disabled for faster builds
